--- a/pagina/estilos.css
+++ b/pagina/estilos.css
@@ -2,7 +2,10 @@ header{
      border: 1px solid red;
      height:200px;
 }
-
+header img{
+   height: 50px;
+   width: 50px;
+}
 @media (max-width:800px){
       header{
         background-color: red;
