--- a/pagina/estilos.css
+++ b/pagina/estilos.css
@@ -7,9 +7,19 @@ header img{
    height: 50px;
    width: 50px;
 }
+
+.classheader{
+  display: flex;
+  height: 80px;
+  width: 400px;
+  justify-content: space-evenly;
+}
 @media (max-width:800px){
       header{
         background-color: red;
+      }
+      header img{
+        display: none;
       }
 }
 @media (min-width:700px) and (max-width: 950px){
