--- a/pagina/estilos.css
+++ b/pagina/estilos.css
@@ -3,31 +3,38 @@ header{
      height:100px;
 }
 
+div{
+  height: 80px;
+  width: 400px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
 header img{
    height: 50px;
    width: 50px;
 }
 
-.classheader{
+.clasheader{
   display: flex;
-  height: 80px;
-  width: 400px;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 @media (max-width:800px){
       header{
         background-color: red;
       }
-      header img{
-        display: none;
-      }
 }
-@media (min-width:700px) and (max-width: 950px){
+@media (min-width:700px) and (max-width: 800px){
      header{
         background-color: blueviolet;
      }
 }
-@media (min-width:950px){
+@media (min-width:800px){
+  header{
+      background-color: greenyellow;
+  }
+}
+@media (min-width:1000px){
     header{
         background-color: greenyellow;
     }
